--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
    <header>
-     <h1 class="text-5xl text-center mt-8">Baper Bank</h1>
+    
+     <h1 class="text-5xl text-center mt-8">Wellcome to <span class="font-bold text-red-500">Baper Bank!!!</span></h1>
+
    </header>
+   <main>
+    <section class="bg-cyan-400 mt-12 w-9/12 m-auto p-8">
+        <h3 class="text-3xl">Please Log in</h3>
+        <div class="mt-4">
+            <input class="w-9/12 block mb-3 rounded-sm px-2" type="email" name="" id="" placeholder="Email">
+            <input class="w-9/12 block mb-3 rounded-sm px-2" type="password" name="" id="" placeholder="Password">
+             <button class="bg-amber-500 px-4 py-1 text-white rounded-md hover:bg-sky-700 ">Submit</button>
+        </div>
+    </section>
+   </main>
 </body>
 </html>
