--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <section class="bg-cyan-400 mt-12 w-9/12 m-auto p-8">
         <h3 class="text-3xl">Please Log in</h3>
         <div class="mt-4">
-            <input class="w-9/12 block mb-3 rounded-sm px-2" type="email" name="" id="" placeholder="Email">
-            <input class="w-9/12 block mb-3 rounded-sm px-2" type="password" name="" id="" placeholder="Password">
-             <button class="bg-amber-500 px-4 py-1 text-white rounded-md hover:bg-sky-700 ">Submit</button>
+            <input class="w-9/12 block mb-3 rounded-sm px-2" type="email" name="" id="user-email" placeholder="Email">
+            <input class="w-9/12 block mb-3 rounded-sm px-2" type="password" name="" id="user-password" placeholder="Password">
+             <button id="btn-submit" class="bg-amber-500 px-4 py-1 text-white rounded-md hover:bg-sky-700 ">Submit</button>
         </div>
     </section>
    </main>
+   <script src="login.js">
+
+   </script>
 </body>
 </html>
