--- a/bank.html
+++ b/bank.html
@@ -19,8 +19,8 @@
         <section class="my-10">
             <div class="grid grid-cols-3 gap-4 w-9/12 mx-auto text-white">
                 <div class="bg-green-500 p-8 rounded-xl">
-                    <h1 class="text-2xl">Deposite</h1>
-                    <h2 class="text-5xl">$00</h2>
+                    <h1  class="text-2xl">Deposite</h1>
+                    <h2 class="text-5xl">$<span id="total-deposite">00</span></h2>
                 </div>
                 <div class="bg-pink-500 p-8 rounded-xl">
                     <h1 class="text-2xl">Withdraw</h1>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="bg-red-500 p-8 rounded-xl">
                     <h1 class="text-2xl">Balance</h1>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$ <span id="balance-tolal">1200</span> </h2>
                 </div>
             </div>
         </section>
