--- a/bank.html
+++ b/bank.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="bg-pink-500 p-8 rounded-xl">
                     <h1 class="text-2xl">Withdraw</h1>
-                    <h2 class="text-5xl">$00</h2>
+                    <h2 class="text-5xl">$ <span id="withdraw-total">00</span></h2>
                 </div>
                 <div class="bg-red-500 p-8 rounded-xl">
                     <h1 class="text-2xl">Balance</h1>
@@ -47,20 +47,19 @@
 
                 <div class="bg-sky-400 p-12 rounded-xl">
                     <h1 class="text-white text-2xl my-2">Please Withdraw</h1>
-                    <div class="rounded-xl text-white">
+                    <div class="rounded-xl ">
                         <input class="w-9/12 block mb-3 rounded-sm px-2" type="email" name="" id="withdraw-field"
                             placeholder="Amount you want Withdraw">
                         <button id="btn-withdraw"
-                            class="bg-amber-500 px-4 py-1 rounded-md hover:bg-sky-700 ">Withdraw</button>
+                            class="bg-amber-500 px-4 py-1 rounded-md hover:bg-sky-700 text-white">Withdraw</button>
                     </div>
                 </div>
 
             </div>
         </section>
     </main>
-    <script src="js/depo.js">
-
-    </script>
+    <script src="js/depo.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
 
 </html>
